手写字符案例分析

--- a/手写字符案例分析.md
+++ b/手写字符案例分析.md
@@ -172,7 +172,7 @@ class Net(nn.Module):
 
 - Conv1层
 
-1. 卷积层：输入三通道，输出32通道，卷积核3×3，步长为1，四边填入1
+1. 卷积层：输入3通道，输出32通道，卷积核3×3，步长为1，四边填入1
 2. 激活函数：ReLu（）
 3. 池化层：最大池化，窗口2×2
 
@@ -703,3 +703,213 @@ scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, [10, 20], 0.1)
 ```
 
 当连续8次损失未下降时，认为此时模型已经收敛，直接退出训练
+
+## 5、测试准确度
+
+### 1、代码总览
+
+#### 1、单张图片测试（源代码）（不做分析）
+
+```python
+import torch
+from PIL.Image import Image
+from torch.utils.data import DataLoader
+import torch.utils.data as Data
+import cv2
+from torch.autograd import Variable
+from torchvision import transforms
+from models.cnn import Net
+from toonnx import to_onnx
+from tqdm import tqdm
+from PIL import Image
+import os
+from dataloader import mnist_loader as ml
+import argparse
+
+use_cuda = True
+model = Net()
+model.load_state_dict(torch.load('output/params_30.pth'))
+model = torch.load('output/model.pth')
+model.eval()
+if use_cuda and torch.cuda.is_available():
+    model.cuda()
+
+to_onnx(model, 3, 28, 28, 'output/params.onnx')
+
+img = cv2.imread('4_00440.jpg')
+img_tensor = transforms.ToTensor()(img)
+img_tensor = img_tensor.unsqueeze(0)
+if use_cuda and torch.cuda.is_available():
+    prediction = model(Variable(img_tensor.cuda()))
+else:
+    prediction = model(Variable(img_tensor))
+pred = torch.max(prediction, 1)[1]
+print(pred)
+cv2.imshow("image", img)
+cv2.waitKey(0)
+```
+
+#### 2、多张图片测试（自行编写）
+
+```python
+import torch
+from PIL.Image import Image
+from torch.utils.data import DataLoader
+import torch.utils.data as Data
+import cv2
+from torch.autograd import Variable
+from torchvision import transforms
+from models.cnn import Net
+from toonnx import to_onnx
+from tqdm import tqdm
+from PIL import Image
+import os
+from dataloader import mnist_loader as ml
+import argparse
+
+def My_loader (Id, root):
+    img = cv2.imread(os.path.join(root, 'test_images/{}').format(Id[0]),
+                     cv2.IMREAD_COLOR
+                     )
+    label = Id[1]
+    # img = transforms(id)
+    transform = transforms.Compose([
+        transforms.ToTensor()
+    ])
+
+    img = transform(img)
+    return img, label
+
+
+class ImageFolder(Data.Dataset):
+
+    def __init__(self, testlist, root):
+        self.ids1 = testlist[0]
+        self.ids2 = testlist[1]
+        self.loader = My_loader
+        self.root = root
+
+    def __getitem__(self,index):
+        Id = [self.ids1[index], self.ids2[index]]
+        img, label = self.loader(Id, self.root)
+
+        return img, label
+
+    def __len__(self):
+        return len(list(self.ids1))
+
+
+if __name__ == '__main__':
+
+    Root = 'E:/python/DeepLearning/MNIST_Dataset/'
+    img_list = os.listdir(os.path.join(Root, 'test_images'))
+    label_list = []
+    for i in range(len(img_list)):
+        label_list.append(int(img_list[i][0]))
+
+    Id = [img_list, label_list]
+
+    dataset = ImageFolder(Id, Root)
+    test_loader = torch.utils.data.DataLoader(
+        dataset,
+        batch_size=1024,
+        shuffle=True,
+        num_workers=4,
+        drop_last=False)
+
+    model = Net()
+    model.load_state_dict(torch.load('output/params_mnist.pth'))
+    model.eval()
+    model.cuda()
+
+    to_onnx(model, 3, 28, 28, 'output/params_mnist.onnx')
+
+    with torch.no_grad():
+        model.eval()
+        eval_acc = 0
+
+        # for batch_x, batch_y in val_loader:
+        for batch_x, batch_y in tqdm(test_loader,
+                                     desc='process',
+                                     colour='Green'):
+            batch_x, batch_y = Variable(batch_x.cuda()), Variable(batch_y.cuda())
+
+            out = model(batch_x)
+            pred = torch.max(out, 1)[1]
+            num_correct = (pred == batch_y).sum()
+            eval_acc += num_correct.item()
+
+    print("Acc: %.3f" % (eval_acc / (len(dataset))))
+```
+
+### 2、代码分析
+
+```python
+def My_loader (Id, root):
+    img = cv2.imread(os.path.join(root, 'test_images/{}').format(Id[0]),
+                     cv2.IMREAD_COLOR
+                     )
+    label = Id[1]
+    # img = transforms(id)
+    transform = transforms.Compose([
+        transforms.ToTensor()
+    ])
+
+    img = transform(img)
+    return img, label
+```
+
+首先在这里的Id由两部分组成，Id[0]是文件名+拓展名，Id[1]是对应标签
+
+所以直接利用Id[0]读出img，然后把Id[1]赋给label
+
+将img转为张量，返回img和label
+
+```python
+class ImageFolder(Data.Dataset):
+
+    def __init__(self, testlist, root):
+        self.ids1 = testlist[0]
+        self.ids2 = testlist[1]
+        self.loader = My_loader
+        self.root = root
+
+    def __getitem__(self,index):
+        Id = [self.ids1[index], self.ids2[index]]
+        img, label = self.loader(Id, self.root)
+
+        return img, label
+
+    def __len__(self):
+        return len(list(self.ids1))
+```
+
+这里的testlist我们传入之前的Id，所以这个ids1就是图片名，ids2是标签
+
+在第二个函数里面我们将图片和标签一张张取出来
+
+```python
+ Root = 'E:/python/DeepLearning/MNIST_Dataset/'
+    img_list = os.listdir(os.path.join(Root, 'test_images'))
+    label_list = []
+    for i in range(len(img_list)):
+        label_list.append(int(img_list[i][0]))
+
+    Id = [img_list, label_list]
+
+    dataset = ImageFolder(Id, Root)
+    test_loader = torch.utils.data.DataLoader(
+        dataset,
+        batch_size=1024,
+        shuffle=True,
+        num_workers=4,
+        drop_last=False)
+```
+
+img_list用来获取文件夹中所有文件名，也就是所有测试图片名
+
+然后把所有测试图片名的第一个数字（标签）存入label_list
+
+把img_list和label_list组成Id
+
+后面不多赘述
